--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "author": "Aaron Heckmann <aaron.heckmann+github@gmail.com>",
   "name": "mongoose-ttl",
   "description": "Mongoose Time-To-Live plugin",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "main": "index",
   "repository": {
     "url": ""
   },
@@ -10,10 +11,14 @@
     "test": "make test"
   },
   "engines": {
-    "node": "~0.4.12"
+    "node": "~0.4.x < 0.7.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "ms": "0.1.0"
+  },
   "devDependencies": {
-    "mongoose": "2.4.10"
+    "mongoose": "2.4.10",
+    "mocha": "0.10.1",
+    "should": "0.5.1"
   }
 }
