--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.0.1",
   "main": "index",
   "repository": {
-    "url": "git@github.com:aheckmann/mongoose-ttl.git"
+    "url": "git://github.com/aheckmann/mongoose-ttl.git"
   },
   "scripts": {
     "test": "make test"
